--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-    - run: npm install
+    - run: |
+        git clone https://github.com/microsoft/vscode-test
+        npm install && npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
     - run: xvfb-run -a npm test
