--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -19,10 +19,15 @@ jobs:
         node-version: 16.x
     - run: |
         git clone https://github.com/microsoft/vscode-test
+        cd vscode-test/sample
         npm install && npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
-    - run: xvfb-run -a npm test
+    - run: |
+        cd vscode-test/sample
+        xvfb-run -a npm test
       if: runner.os == 'Linux'
-    - run: npm test
+    - run: |
+        cd vscode-test/sample
+        npm test
       if: runner.os != 'Linux'
