--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -21,7 +21,7 @@ jobs:
         git clone https://github.com/microsoft/vscode-test
         cd vscode-test/sample
         npm install
-        npm i rimraf unzipper http-proxy-agent
+        npm install rimraf unzipper http-proxy-agent
         npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
