--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -19,9 +19,8 @@ jobs:
         node-version: 16.x
     - run: |
         git clone https://github.com/microsoft/vscode-test
-        cd vscode-test/sample
+        cd vscode-test
         npm install
-        npm install rimraf unzipper http-proxy-agent
         npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
