--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest] #[macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -24,11 +24,15 @@ jobs:
         npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
-    - run: |
-        cd vscode-test/sample
-        xvfb-run -a npm test
-      if: runner.os == 'Linux'
-    - run: |
-        cd vscode-test/sample
-        npm test
-      if: runner.os != 'Linux'
+      with:
+          run: npm test
+          working-directory: ./ #optional
+          options: #optional
+    #- run: |
+    #    cd vscode-test/sample
+    #    xvfb-run -a npm test
+    #  if: runner.os == 'Linux'
+    #- run: |
+    #    cd vscode-test/sample
+    #    npm test
+    #  if: runner.os != 'Linux' 
