--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -19,13 +19,14 @@ jobs:
         node-version: 16.x
     - run: |
         git clone https://github.com/microsoft/vscode-test
+        cd vscode-test
         npm install
         npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
       with:
           run: npm test
-          working-directory: ./sample
+          working-directory: ./vscode-test/sample
     #- run: |
     #    cd vscode-test/sample
     #    xvfb-run -a npm test
