--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -24,14 +24,12 @@ jobs:
         npm run compile
     - name: Install
       uses: GabrielBB/xvfb-action@v1
-      with:
-          run: npm test
-          working-directory: ./vscode-test/sample
-    #- run: |
-    #    cd vscode-test/sample
-    #    xvfb-run -a npm test
-    #  if: runner.os == 'Linux'
-    #- run: |
-    #    cd vscode-test/sample
-    #    npm test
-    #  if: runner.os != 'Linux' 
+    - name: Run tests
+    - run: |
+        cd vscode-test/sample
+        xvfb-run -a npm test
+      if: runner.os == 'Linux'
+    - run: |
+        cd vscode-test/sample
+        npm test
+      if: runner.os != 'Linux' 
