--- a/.github/workflows/vscode-tests.yml
+++ b/.github/workflows/vscode-tests.yml
@@ -11,24 +11,33 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
+    
     - name: Checkout
       uses: actions/checkout@v3
+      
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-    - run: |
+        
+    - name: Get tests
+      run: |
         git clone https://github.com/microsoft/vscode-test
         cd vscode-test
         npm install
         npm run compile
-    - name: Install
-      uses: GabrielBB/xvfb-action@v1
-      with:
-        working-directory: vscode-test/sample
-        run: |
-          npm install
-          xvfb-run -a npm test
+        
+    - name: Run tests
+      run: |
+        xvfb-run --auto-servernum npm test
+    #- name: Install
+    #  uses: GabrielBB/xvfb-action@v1
+    #  with:
+    #    working-directory: vscode-test/sample
+    #    run: |
+    #      npm install
+    #      xvfb-run -a npm test
+    
     #  if: runner.os == 'Linux'
     #- run: |
     #    cd vscode-test/sample
